only matching with someone on the array is left

--- a/views/home.html
+++ b/views/home.html
@@ -13,13 +13,9 @@
     <link rel="stylesheet" href="">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+   
 </head>
 
 <body class="black">
@@ -41,11 +37,11 @@
 
                             <li>Tired  of dating apps?</li>
                             <br>
-                            <li>Only interested in making friends?</li>
+                            <li>Only interested in platonic relationships?</li>
                             <br>
                             <li>Do you have a hard time finding people with the same interest yourself?</li>
                             <br>
-                            <li>Stop worrying ,take our survey and we'll take care of the rest!</li>
+                            <li>take our survey and we'll take care of the rest!</li>
                          
                         </ul>
                         <div class="center">
@@ -95,6 +91,10 @@
 
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
 
