--- a/views/home.html
+++ b/views/home.html
@@ -51,8 +51,8 @@
                     </h5>
                   </div>
                   <div class="card-action black white-text">
-                    <a href="#">Api Friends list</a>
-                    <a href="#">Github Repo</a>
+                    <a href="/api/friends">Api Friends list</a>
+                    <a href="https://github.com/JimmyNagles/friend-finder">Github Repo</a>
                   </div>
 
 
